tests/cases/compiler-development/artifact/errors/diagnostic-lexer-unterminated-string.ari
fn main() -> i64 {
  let text = "open
  return 0;
}
